--- a/Sokoban/Sokoban.vcxproj.filters
+++ b/Sokoban/Sokoban.vcxproj.filters
@@ -39,4 +39,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="x64\Debug\Sokoban.tlog\caja.png">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
