--- a/Sokoban/Sokoban.vcxproj.filters
+++ b/Sokoban/Sokoban.vcxproj.filters
@@ -44,10 +44,21 @@
     <ClInclude Include="Boton.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="x64\Debug\Sokoban.tlog\caja.png">
       <Filter>Archivos de recursos</Filter>
     </Image>
+    <Image Include="Reiniciar.png">
+      <Filter>Archivos de recursos</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Sokoban.rc">
+      <Filter>Archivos de recursos</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
